--- a/cocoblockly/assets/cocoblockly.css
+++ b/cocoblockly/assets/cocoblockly.css
@@ -161,9 +161,34 @@ div#simulator .close {
 }
 
 
+  .split {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+
   .gutter {
     background-color: #eee;
 
     background-repeat: no-repeat;
     background-position: 50%;
   }
+
+  .gutter.gutter-horizontal {
+    background-image: url('vertical_grip.png');
+    cursor: ew-resize;
+  }
+
+  .gutter.gutter-vertical {
+    background-image: url('horizontal_grip.png');
+    cursor: ns-resize;
+  }
+
+  .split.split-horizontal, .gutter.gutter-horizontal {
+    height: 100%;
+    float: left;
+  }
+
