--- a/cocoblockly/assets/cocoblockly.css
+++ b/cocoblockly/assets/cocoblockly.css
@@ -176,6 +176,8 @@ div#simulator .close {
 
     background-repeat: no-repeat;
     background-position: 50%;
+        z-index: 999;
+
   }
 
   .gutter.gutter-horizontal {
