--- a/cocoblockly/assets/cocoblockly.css
+++ b/cocoblockly/assets/cocoblockly.css
@@ -217,3 +217,14 @@ div#simulator .close {
     font-size: 80%;
 }
 
+[data-notify="progressbar"] {
+    margin-bottom: 0px;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    height: 5px;
+}
+
+
+
