--- a/cocoblockly/assets/blockly_style.css
+++ b/cocoblockly/assets/blockly_style.css
@@ -509,3 +509,44 @@ padding: 0;
   border-color: #246 #9bd #9bd #246;
   color: #fff;
 }
+
+
+.blocklyToolboxDiv {
+  border-color: #e0e0e0 !important;
+  border-width: 0px 1px 0px 0px !important;
+  border: none !important;
+  margin: 0px !important;
+  padding: 0px 0px 0px 0px !important;
+  background: rgb(242, 249, 238) !important;  /* Arduino Light Teal */
+  overflow: hidden !important;
+}
+.blocklyTreeRow {
+  background: none !important;
+  border: none !important;
+  margin: 0px 0px !important;
+  padding: 4px 16px 4px 0px !important;
+  box-sizing: content-box !important;
+}
+.blocklyTreeSelected {
+  background-color: #E47128 !important;  /* arduino orange */
+}
+.blocklyTreeRow:not(.blocklyTreeSelected):hover {
+  background-color: rgba(255, 204, 51, 1) !important;  /* arduino yellow */
+} 
+
+
+.blocklyTreeSeparator{
+  padding: 0px !important;
+  margin: 0px !important;
+}
+
+/* Toolbox second column with blocks*/
+.blocklyFlyoutBackground {
+  fill: rgb(202, 209, 198) !important;
+  fill-opacity: 0.4 !important;
+  -webkit-border-radius: 0px 0px 0px 0px !important;
+  -moz-border-radius: 0px 0px 0px 0px !important;
+  border-radius: 0px 0px 0px 0px !important;
+}
+
+
