add linter support

--- a/cocoblockly/assets/cocoblockly.css
+++ b/cocoblockly/assets/cocoblockly.css
@@ -227,4 +227,7 @@ div#simulator .close {
 }
 
 
+.lint-error {font-size: 70%; background: #ffa; color: #a00; padding: 2px 5px 3px; }
+.lint-error-icon {color: white; background-color: red; font-weight: bold; border-radius: 50%; padding: 0 3px; margin-right: 7px;}
+
 
