--- a/cocoblockly/assets/blockly_style.css
+++ b/cocoblockly/assets/blockly_style.css
@@ -524,7 +524,7 @@ padding: 0;
   background: none !important;
   border: none !important;
   margin: 0px 0px !important;
-  padding: 4px 16px 4px 0px !important;
+  /*padding: 4px 16px 4px 0px !important;*/
   box-sizing: content-box !important;
 }
 .blocklyTreeSelected {
